sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:3: error: illegal start of simple expression
	for (j<-0 to getNombreValeurs()-2 )) {
                                           ^